src/OpenCvSharpExtern/core_Mat.h

CVAPI(int) core_Mat_nSetVec4i(cv::Mat *obj, int row, int col, cv::Vec4i *vals, int valsLength)
{
    return internal_Mat_set<cv::Vec4i>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nSetPoint(cv::Mat *obj, int row, int col, cv::Point *vals, int valsLength)
{
    return internal_Mat_set<cv::Point>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nSetPoint2f(cv::Mat *obj, int row, int col, cv::Point2f *vals, int valsLength)
{
    return internal_Mat_set<cv::Point2f>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nSetPoint2d(cv::Mat *obj, int row, int col, cv::Point2d *vals, int valsLength)
{
    return internal_Mat_set<cv::Point2d>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nSetPoint3i(cv::Mat *obj, int row, int col, cv::Point3i *vals, int valsLength)
{
    return internal_Mat_set<cv::Point3i>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nSetPoint3f(cv::Mat *obj, int row, int col, cv::Point3f *vals, int valsLength)
{
    return internal_Mat_set<cv::Point3f>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nSetPoint3d(cv::Mat *obj, int row, int col, cv::Point3d *vals, int valsLength)
{
    return internal_Mat_set<cv::Point3d>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nSetRect(cv::Mat *obj, int row, int col, cv::Rect *vals, int valsLength)
{
    return internal_Mat_set<cv::Rect>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nGetB(cv::Mat *obj, int row, int col, uchar *vals, int valsLength)
{
    return internal_Mat_get<char>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nGetS(cv::Mat *obj, int row, int col, short *vals, int valsLength)
{
    return internal_Mat_get<short>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nGetI(cv::Mat *obj, int row, int col, int *vals, int valsLength)
{
    return internal_Mat_get<int>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nGetF(cv::Mat *obj, int row, int col, float *vals, int valsLength)
{
    return internal_Mat_get<float>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nGetD(cv::Mat *obj, int row, int col, double *vals, int valsLength)
{
    return internal_Mat_get<double>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nGetVec3b(cv::Mat *obj, int row, int col, cv::Vec3b *vals, int valsLength)
{
    return internal_Mat_get<cv::Vec3b>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nGetVec3d(cv::Mat *obj, int row, int col, cv::Vec3d *vals, int valsLength)
{
    return internal_Mat_get<cv::Vec3d>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nGetVec4f(cv::Mat *obj, int row, int col, cv::Vec4f *vals, int valsLength)
{
    return internal_Mat_get<cv::Vec4f>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nGetVec6f(cv::Mat *obj, int row, int col, cv::Vec6f *vals, int valsLength)
{
    return internal_Mat_get<cv::Vec6f>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nGetVec4i(cv::Mat *obj, int row, int col, cv::Vec4i *vals, int valsLength)
{
    return internal_Mat_get<cv::Vec4i>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nGetPoint(cv::Mat *obj, int row, int col, cv::Point *vals, int valsLength)
{
    return internal_Mat_get<cv::Point>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nGetPoint2f(cv::Mat *obj, int row, int col, cv::Point2f *vals, int valsLength)
{
    return internal_Mat_get<cv::Point2f>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nGetPoint2d(cv::Mat *obj, int row, int col, cv::Point2d *vals, int valsLength)
{
    return internal_Mat_get<cv::Point2d>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nGetPoint3i(cv::Mat *obj, int row, int col, cv::Point3i *vals, int valsLength)
{
    return internal_Mat_get<cv::Point3i>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nGetPoint3f(cv::Mat *obj, int row, int col, cv::Point3f *vals, int valsLength)
{
    return internal_Mat_get<cv::Point3f>(obj, row, col, (char*)vals, valsLength);
}